Create API routes for handling Cart, tests and specs for them
