# public/openapi.yaml
@@ -209,6 +209,197 @@ paths:
                     type: string
                   data:
                     $ref: '#/components/schemas/Error'
+  /cart:
+    get:
+      summary: Returns the content of the cart. Requires authorization
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Content of the cart has been returned.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/CartItem'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+    post:
+      summary: Adds a product with specified id into the cart. Requires authorization
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                quantity:
+                  type: integer
+              required:
+                - id
+      responses:
+        '200':
+          description: A product has been added to the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/CartItem'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Bad request. Product has not been added to the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Error'
+    patch:
+      summary: Updates the quantity of a product with specified id into the cart. Requires authorization
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                quantity:
+                  type: integer
+              required: [id, quantity]
+      responses:
+        '200':
+          description: A product has been updated in the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/CartItem'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Bad request. Product has not been updated in the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Error'
+    delete:
+      summary: Removes product with specified id from the cart. Requires authorization
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+              required: [id]
+      responses:
+        '200':
+          description: A product has been removed from the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/CartItem'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Bad request. Product has not been removed from the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Error'
 components:
   securitySchemes:
     bearerAuth: 
@@ -280,6 +471,28 @@ components:
             $ref: '#/components/schemas/Category'
       required:
         - name
+    CartItem:
+      required: [id, name, price, quantity, attributes, conditions]
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        price:
+          type: number
+        quantity:
+          type: integer
+        attributes:
+          type: object
+          properties:
+            image:
+              type: string
+              nullable: true
+        conditions:
+          type: array
+          items:
+            type: string
     Error:
       type: object
       properties:
